--- a/earninner.html
+++ b/earninner.html
@@ -109,7 +109,7 @@
           <div class="header d-flex align-items-center">
             <div class="row align-content-center w-100">
               <div class="col-4">
-                <a href="#" class="logo">
+                <a href="./index.html" class="logo">
                   <img src="./images/logo.png" />
                 </a>
 
@@ -122,7 +122,7 @@
               <div class="col-8">
                 <div class="header_menu">
                   <div class="dropdown notification">
-                    <button class="btn btn-secondary notify_btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary notify_btn" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                       <svg width="24" height="24" viewdiv="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path opacity="0.4" d="M12 6.43994V9.76994" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" />
                         <path d="M12.0199 2C8.3399 2 5.3599 4.98 5.3599 8.66V10.76C5.3599 11.44 5.0799 12.46 4.7299 13.04L3.4599 15.16C2.6799 16.47 3.2199 17.93 4.6599 18.41C9.4399 20 14.6099 20 19.3899 18.41C20.7399 17.96 21.3199 16.38 20.5899 15.16L19.3199 13.04C18.9699 12.46 18.6899 11.43 18.6899 10.76V8.66C18.6799 5 15.6799 2 12.0199 2Z" stroke="currentColor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" />
@@ -130,7 +130,15 @@
                       </svg>
                     </button>
                     <div class="dropdown-menu">
-                      <h4>Notifications</h4>
+                      <div class="d-flex align-items-center justify-content-between pt-3 px-3 border-bottom">
+                        <h4>Notifications</h4>
+                        <button class="boost_menuClose">
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </button>
+                      </div>
                       <ul>
                         <li class="notify_list_item">
                           <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="notify_avtar" />
@@ -147,16 +155,19 @@
                   </div>
 
                   <div class="dropdown user_menu">
-                    <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                       <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="MuiAvatar-img css-1pqm26d-MuiAvatar-img" />
                     </button>
                     <div class="dropdown-menu">
-                      <button class="boost_menuClose">
-                        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root" focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
-                          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
-                        </svg>
-                      </button>
-                      <h5 class="userMenu_title">User Profile</h5>
+                      <div class="d-flex align-items-center justify-content-between pt-3 px-3 border-bottom">
+                        <h5 class="userMenu_title">User Profile</h5>
+                        <button class="boost_menuClose">
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                          </svg>
+                        </button>
+                      </div>
 
                       <div class="user_account">
                         <img src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="user_img" />
@@ -206,6 +217,7 @@
           </div>
         </div>
         <div class="p-3">
+          <h4 class="page_title">Earn inner</h4>
 
           <!-- <div class="balanceCard_box">
             <div class="row">
