--- a/header.html
+++ b/header.html
@@ -42,7 +42,7 @@
             <img alt="Jenish Mangukiya" src="https://modernize-vuejs.adminmart.com/assets/user-1-6d05e3ce.jpg" class="MuiAvatar-img css-1pqm26d-MuiAvatar-img" />
           </button>
           <div class="dropdown-menu">
-            <button class="boost_menuClose">
+            <button class="boost_menuClose" onclick="closeDropdownMenu()">
               <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root" focusable="false" aria-hidden="true" viewdiv="0 0 24 24" data-testid="CloseIcon">
                 <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
               </svg>
