--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
             </li>
 
             <li class="btn_mobile_plus">
-              <button id="toggleDrawerWithdraw" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+              <button data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6 12H18" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
                   <path d="M12 18V6" stroke="currentColor" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round" />
@@ -131,7 +131,7 @@
                   <div class="dropdown-menu">
                     <div class="d-flex align-items-center justify-content-between pt-3 px-3 border-bottom">
                       <h4>Notifications</h4>
-                      <button class="boost_menuClose">
+                      <button class="boost_menuClose" onclick="closeDropdownMenu()">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -160,7 +160,7 @@
                   <div class="dropdown-menu">
                     <div class="d-flex align-items-center justify-content-between pt-3 px-3 border-bottom">
                       <h5 class="userMenu_title">User Profile</h5>
-                      <button class="boost_menuClose">
+                      <button class="boost_menuClose" onclick="closeDropdownMenu()">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
